# ROS2_testing

ai-navigation/navigation/: CMakeLists.txt  package.xml  setup.py
ai-navigation/navigation/navigation/: collision_detector.py  global_planner.py  local_planner.py  zed_object_to_obstacle.py
