<?xml version="1.0"?>
<package format="3">
  <name>navigation</name>
  <version>0.0.0</version>
  <description>ROS 2 navigation nodes for JACart2</description>
  <maintainer email="zanem@cox.net">Zane Metz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>navigation_interface</depend>
  <depend>motor_control_interface</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>geometry_msgs</depend>
  <depend>numpy</depend>

  <exec_depend>launch</exec_depend>
</package>